--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "env cmd -f ./src/ .env nodemon index.js",
+    "start": "node index.js"
+
   },
   "eslintConfig": {
     "extends": "react-app"
